plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "6.1.0"
    id 'info.solidsoft.pitest' version '1.5.2'
    id 'se.patrikerdes.use-latest-versions' version '0.2.15'
    id 'com.github.ben-manes.versions' version '0.36.0'
}


apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "core.Chuu"

group 'ish'
version '1.0'
apply plugin: 'java'

sourceCompatibility = 15
targetCompatibility = 15

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://dl.bintray.com/natanbc/maven' }

    maven {
        url 'https://dl.bintray.com/sedmelluq/com.sedmelluq'
    }

}


compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]

}
test {
    jvmArgs '--enable-preview'

}
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'


dependencies {
// https://mvnrepository.com/artifact/org.knowm.xchart/xchart
    implementation project(':model')
    implementation group: 'org.knowm.xchart', name: 'xchart', version: '3.8.0'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:6.5.1'

    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'

    // Audio
    implementation 'com.sedmelluq:lavaplayer:1.3.66'
    implementation 'com.github.natanbc:lavadsp:0.7.5'
    implementation 'com.sedmelluq:lavaplayer-ext-youtube-rotator:0.2.3'
    implementation 'com.sedmelluq:jda-nas:1.1.0'

    implementation 'com.neovisionaries:nv-i18n:1.27'
    implementation 'com.github.natanbc:java-eval:1.0'
    compile group: 'com.google.guava', name: 'guava', version: '30.1-jre'
    implementation('net.dv8tion:JDA:4.2.0_225')
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.json', name: 'json', version: '20201115'
    implementation 'org.beryx:awt-color-factory:1.0.2'
    compile group: 'io.github.classgraph', name: 'classgraph', version: '4.8.98'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.6.1'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.6.1'
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.13'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.13'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.13'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'


    // TEST
// https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.0.3'
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.8.13'

// https://mvnrepository.com/artifact/org.ow2.asm/asm
    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.0'

// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
    testImplementation group: 'org.graphwalker', name: 'graphwalker-core', version: '4.3.0'
// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
    // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'

// https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
    //a
    testImplementation group: 'com.pholser', name: 'junit-quickcheck-core', version: '1.0'
    testImplementation "org.mockito:mockito-core:3.6.28"
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'


}
